<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@drawable/lyf_bg_solid">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/lyfbrand"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/AppLogoDesc"/>

        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/TextInputLayoutAppearance">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cocogoosecondensed_ultralight"
                android:textColor="@color/white"
                android:hint="@string/stringCreateName"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:targetApi="o" />

        </android.support.design.widget.TextInputLayout>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/TextInputLayoutAppearance">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/stringCreateEmail"
                android:fontFamily="@font/cocogoosecondensed_ultralight"
                android:importantForAutofill="no"
                android:textColor="@color/white"
                tools:targetApi="o" />

        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/TextInputLayoutAppearance">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="font/cocogoosecondensed_ultralight"
                android:inputType="textPassword"
                android:hint="@string/stringCreatePassword"
                android:textColor="@color/white"
                android:importantForAutofill="no"
                tools:targetApi="o" />

        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shapelogin"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/stringCreateAccount"
            android:textColor="@color/white"
            android:fontFamily="@font/cocogoosecondensed_ultralight"/>

        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/stringAlreadyExistingUser"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/cocogoosecondensed_ultralight"/>

    </LinearLayout>
</ScrollView>